test/ReverseProxy.Kubernetes.Tests/testassets/multiple-endpoints-ports/clusters.json
[
  {
    "ClusterId": "frontend:80",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.2.38:80": {
        "Address": "http://10.244.2.38:80",
        "Health": null,
        "Metadata": null
      }
    },
    "Metadata": null
  },
  {
    "ClusterId": "frontend:443",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {},
    "Metadata": null
  }
]
