test/ReverseProxy.Kubernetes.Tests/testassets/multiple-endpoints-ports/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frontend
subsets:
  - addresses:
    - ip: 10.244.2.38
    ports:
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
